--- a/.gitignore
+++ b/.gitignore
@@ -384,7 +384,7 @@ fabric.properties
 ### Python Patch ###
 # Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
 poetry.toml
-
+.idea/
 # ruff
 .ruff_cache/
 
